gcc/testsuite/rust/rustc/ui/deprecation/invalid-literal.rs
#[deprecated = b"test"] // { dg-error "" "" { target *-*-* } }
fn foo() {}

fn main() {}

